add angular-frontend
