# src/services/front/src/app/core/api/v1/api/shortn.serviceInterface.ts
@@ -1,0 +1,47 @@
+/**
+ * Shortn API
+ * API for shortening URLs and retrieving all shortened URLs.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { ShortURL } from '../model/models';
+import { ShortnReq } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface ShortnServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * Retrieve all shortened URLs
+     * 
+     */
+    allGet(extraHttpRequestParams?: any): Observable<Array<ShortURL>>;
+
+    /**
+     * Delete a shortened URL
+     * 
+     * @param _short The short part of the URL
+     */
+    shortDelete(_short: string, extraHttpRequestParams?: any): Observable<{}>;
+
+    /**
+     * Shorten a URL
+     * 
+     * @param shortnReq 
+     */
+    storePost(shortnReq: ShortnReq, extraHttpRequestParams?: any): Observable<ShortURL>;
+
+}
