# src/services/front/src/app/core/api/v1/model/models.ts
@@ -1,0 +1,2 @@
+export * from './short-url';
+export * from './shortn-req';
