# src/services/front/src/app/core/api/v1/model/store-post200-response.ts
@@ -1,0 +1,16 @@
+/**
+ * Shortn API
+ * API for shortening URLs and retrieving all shortened URLs.
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface StorePost200Response { 
+    _short?: string;
+}
+
